AUTOMAKE_OPTIONS = foreign

check_PROGRAMS = testdriver testdriver2

TESTS = testdriver testdriver2

testdriver_CFLAGS  = @TEST_CFLAGS@
testdriver_LDFLAGS = @TEST_LDFLAGS@
testdriver_SOURCES = test.c

testdriver2_CFLAGS  = @TEST_CFLAGS@
testdriver2_LDFLAGS = @TEST_LDFLAGS@
testdriver2_SOURCES = test2.c
